force-app/main/default/objects/Tv_Serie__c/fields/Directors__c.field-meta.xml
<CustomField>
    <fullName>Directors__c</fullName>
    <label>Directors</label>
    <type>TextArea</type>
</CustomField>