force-app/main/default/objects/Tv_Serie__c/fields/Logo__c.field-meta.xml
<CustomField>
    <fullName>Logo__c</fullName>
    <formula>IMAGE(&apos;1000logos.net/wp-content/uploads/2021/04/Stranger-Things-logo.png&apos;, &quot;It&apos;e empty here, sory.&quot;, 100, 100)</formula>
    <label>Logo</label>
    <type>Text</type>
</CustomField>