force-app/main/default/objects/Tv_Serie__c/fields/Logo_url__c.field-meta.xml
<CustomField>
    <fullName>Logo_url__c</fullName>
    <label>Logo url</label>
    <type>Url</type>
</CustomField>