force-app/main/default/objects/Tv_Serie__c/fields/Premiere__c.field-meta.xml
<CustomField>
    <fullName>Premiere__c</fullName>
    <label>Premiere</label>
    <type>Date</type>
</CustomField>