force-app/main/default/objects/Tv_Serie__c/validationRules/Premiere_before_tv.validationRule-meta.xml
<ValidationRule>
    <fullName>Premiere_before_tv</fullName>
    <active>true</active>
    <errorConditionFormula>Premiere__c  &lt;  DATE(1928,7,3)</errorConditionFormula>
    <errorDisplayField>Premiere__c</errorDisplayField>
    <errorMessage>At that time, television did not exist.</errorMessage>
</ValidationRule>