force-app/main/default/objects/Tv_Serie__c/listViews/List_view.listView-meta.xml
<ListView>
    <fullName>List_view</fullName>
    <columns>NAME</columns>
    <columns>Logo__c</columns>
    <columns>Rate__c</columns>
    <columns>Category__c</columns>
    <filterScope>Mine</filterScope>
    <label>List view</label>
</ListView>